--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <div class="line"></div>
             <span>소개 글</span>
         </div>
-        <div>
+        <div style="text-align: center;">
             <h2>개발자 지망생 박태환입니다</h2>
-            <p>다른 사람들에게 무엇인가를 가르쳐주고 도움을 줄 때 기쁨을 느끼던 저는 유아교육학을 전공했습니다.<br>
+            <p style="font-size: 20px;">다른 사람들에게 무엇인가를 가르쳐주고 도움을 줄 때 기쁨을 느끼던 저는 유아교육학을 전공했습니다.<br>
                 유아교사로서 어린이들을 가르치고 함께 생활하며 충분히 만족하고 기쁨을 얻었지만 현실적인 벽에 부딪히고 말았습니다.<br>
                 내가 할 수 있는 것과 하고 싶은 것 둘 다 가지려면 어떤 직업을 선택해야 할까 많은 고민을 한 끝에 코딩이라는 결론에 도달했습니다.</p>
-            <p>누군가에게 작은 도움이라도 되는 개발자가 되고 싶습니다. <br>
+            <p style="font-size: 20px;">누군가에게 작은 도움이라도 되는 개발자가 되고 싶습니다. <br>
                 내 주변 가족, 친구부터 지인, 우리나라 사람들, 더 나아가 모든 사람들에게 도움이 된다면 더 좋겠지요.<br>
                 작은 아이디어라도 싹을 틔워 꽃을 피울 수 있는 그런 개발자가 되도록 더 많이 배우고 공부하겠습니다. 
             </p>
