add Javascript (dark mode, landing page)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <title>Welcome!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="main.js">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
+    <script>
+ 
+    </script>
     <header class="nav" style="left: 0px;">
         <div class="home"><a target="_top" href="#container1">HOME</a></div>
+        <button onclick="darkMode()" id="button">Dark Mode</button>
         <div class="nav-right-items">
             <div class="nav-item"><a href="#container2">About Me</a></div>
             <div class="nav-item"><a href="#container3">TMI</a></div>
