--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrap">
         <h1>
-            <span class="material-icons"><a href="index.html">language</a> </span>
+            <span class="material-icons"><a href="page2.html">language</a> </span>
         </h1>
         <p id="dynamic" class="lg-text">
             
